--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
 
         <div class="site">
             <div class="header">
-                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-                <a class="extra" href="/">home</a>
-                <a class="extra" href="/about.html">about</a>
+		<a href="/" class="header__link header__link--title">{{ site.name }}</a>
+		<a class="header__link  header__link--nav" href="/">home</a>
+		<a class="header__link header__link--nav" href="/about.html">about</a>
             </div>
 
             {{ content }}
