--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,133 +1,19 @@
-@import "reset";
+@import "common";
 @import "syntax";
-
-$serif: 'Lusitana', serif;
-$serif-2: 'Merriweather', serif;
-$sans-serif: 'Merriweather Sans', sans-serif;
+@import "header";
+@import "posts";
+@import "footer";
 body {
     background: white;
 }
 
-ul.social{
-    width: 100%;
-    list-style: none;
-    display: inline;
-    text-align: center;
-    li {
-        float: left;
-        padding: 0 5px 0 5px;
-        font-size: 1.5em;
-    }
+.site {
+    text-align: justify;
+    max-width: 700px;
+    margin: $base-spacing auto;
+    line-height: $base-font-size;
 }
 
-article {
-    font-family: $serif-2;
-
-    &:after {
-        content:"";
-        display:table;
-        clear:both;
-    }
-
-    text-align: left;
-
-    .post-category {
-        border-bottom: 1px solid;
-        display: inline-block;
-        font-family: $sans-serif;
-        font-size: .7em;
-        font-weight: 700;
-        margin-bottom: 2em;
-        padding: .3em 0;
-        text-align: left;
-        text-transform: uppercase;
-    }
-
-    h1 {
-        font-family: $serif;
-        font-size: 2em;
-        font-weight: 700;
-        margin-bottom: .5em;
-    }
-
-    h2 {
-        font-family: $serif-2;
-        font-style: italic;
-        font-size: 1em;
-        font-weight: 400;
-        line-height: 1.6em;
-        margin-bottom: .9em;
-    }
-
-    code {
-        white-space: nowrap;
-        font-family: monaco;
-        background: #F7F7F7;
-        border: 1px solid #E0E0E0;
-        padding: .1em .4em;
-        font-size: .75em;
-        font-style: normal;
-    }
-
-    h3 {
-        font-family: $serif;
-        font-size: 1.4em;
-        font-weight: 400;
-        line-height: 1.3em;
-        margin-bottom: .4em;
-    }
-
-    p.date {
-        font-family: $serif-2;
-        font-style: italic;
-        font-size: .9em;
-        margin-bottom: .3em;
-    }
-
-    p {
-        font-family: $serif-2;
-        line-height: 1.6em;
-        font-size: .9em;
-        margin-bottom: 1.5em;
-        word-wrap: break-word;
-
-        span {
-            font-family: $sans-serif;
-            font-weight: 700;
-        }
-    }
-
-    a.read-more {
-        display: inline-block;
-        font-family: $sans-serif;
-        font-weight: 700;
-        font-size: .8em;
-        text-transform: uppercase;
-        margin-left: .2em;
-        position: relative;
-
-        span {
-            font-family: $serif;
-            font-style: normal;
-            position: absolute;
-            font-size: 1.5em;
-            top: -1px;
-            right: -12px;
-        }
-    }
-
-    li{
-        font-size: .75em;
-    }
-
-    .display-inline {
-        display: inline;
-        & + * {
-            display: inline;
-        }
-    }
-
-    hr {
-        width: 3em;
-    }
+.meta {
+    color: $gray;
 }
