--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <article class="post">
-<p class="post-category">{{ page.category }}</p>
-<h1>{{ page.title }}</h1>
-<p class="date">{{ page.date | date_to_string }}</p>
-<p>{{ content }}</p>
+<p class="post__category">{{ page.category }}</p>
+<h1 class="post__title">{{ page.title }}</h1>
+<p class="post__date">{{ page.date | date_to_string }}</p>
+<p class="post__content">{{ content }}</p>
 </article>
