--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -1,18 +1,12 @@
 .header {
     &__link {
-	font-weight: bold;
+	@include nav_anchor;
 	text-decoration: none;
 	text-transform: lowercase;
 	margin-bottom: $base-spacing*2;
 
-	&:hover {
-	    color: $black;
-	}
-
 	&--title {
-	    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-	    font-size: $h1;
-	    line-height: $h1;
+	    @include h1_style;
 	    display: inline-block;
 	    @media only screen and (max-width: 736px){
 		display: block;
@@ -20,7 +14,6 @@
 	}
 
 	&--nav {
-	    color: $gray;
 	    border-right: 1px solid $gray;
 	    padding: 0 $base-spacing 0 $base-spacing;
 	    &:last-of-type {
