Using variables for spacing, updated index post description list styling

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <article class="post">
-<h1 class="post__title">{{ page.title }}</h1>
-<p class="post__date">{{ page.date | date_to_string }}</p>
-<p class="post__content">{{ content }}</p>
-<p class="post__category">{{ page.category }}</p>
+    <h1 class="post__title">{{ page.title }}</h1>
+    <h3 class="post__date">{{ page.date | date_to_string }}</h3>
+    <p class="post__content">{{ content }}</p>
+    <h3 class="post__category">{{ page.category }}</h3>
 </article>
