--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -8,6 +8,7 @@ $sans-serif: 'Merriweather Sans', sans-serif;
 
 @mixin typography {
  font-family: $sans-serif;
+ line-height: 1.6em;
 }
 
 @mixin base_typography {
