--- a/_scss/_posts.scss
+++ b/_scss/_posts.scss
@@ -44,24 +44,23 @@
    }
 
    img {
-      max-height: 400px;
+      max-width: 33%;
+      height: auto;
       float: left;
       margin-right: $base-spacing;
-      margin-bottom: $base-spacing;
+
+      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+	 margin-bottom: $base-spacing;
+	 max-width: 100%;
+      }
    }
 
    &__title {
       @include h1_style;
-      font-family: $serif;
-      font-weight: 700;
-      margin-bottom: .5em;
    }
 
    &__date {
-      font-family: $serif-2;
       font-style: italic;
-      font-size: .9em;
-      margin-bottom: .3em;
    }
 
    &__content {
