--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 h1 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 51px;
   line-height: 52px;
-  font-weight: 900;
-  letter-spacing: 1px; }
+  font-weight: 900; }
 
 h2 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 34px;
   line-height: 41px;
@@ -17,14 +14,12 @@ h2 {
 
 h3 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 19px;
   line-height: 27px; }
 
 h4, h5, h6 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   color: #aaa;
   font-weight: 900;
@@ -40,12 +35,10 @@ h4, h5, h6 {
   .header__link {
     color: #0074D9;
     font-size: 11px;
-    letter-spacing: 1px;
     font-weight: 600;
     text-decoration: none;
     text-decoration: none;
-    text-transform: lowercase;
-    margin-bottom: 0.55em; }
+    text-transform: lowercase; }
     .header__link:visited {
       color: #0074D9; }
     .header__link:hover {
@@ -54,12 +47,10 @@ h4, h5, h6 {
       color: #004b8c; }
     .header__link--title {
       font-family: "Merriweather Sans", sans-serif;
-      letter-spacing: 1px;
       display: block;
       font-size: 51px;
       line-height: 52px;
       font-weight: 900;
-      letter-spacing: 1px;
       color: #7FDBFF;
       display: inline-block; }
       @media only screen and (max-width: 736px) {
@@ -117,12 +108,10 @@ h4, h5, h6 {
         max-width: 100%; } }
   .post__title {
     font-family: "Merriweather Sans", sans-serif;
-    letter-spacing: 1px;
     display: block;
     font-size: 51px;
     line-height: 52px;
-    font-weight: 900;
-    letter-spacing: 1px; }
+    font-weight: 900; }
   .post__date {
     font-style: italic; }
   .post__content {
@@ -137,20 +126,22 @@ h4, h5, h6 {
 
 .social {
   width: 100%;
-  list-style: none;
-  display: inline;
-  text-align: center; }
+  list-style: none; }
   .social li {
     float: left;
-    padding: 0 5px 0 5px;
+    padding: 0 0.55em 0 0.55em;
     font-size: 1.5em; }
 
 footer {
-  font-size: 80%;
   color: #aaa;
-  border-top: 2px solid #ddd;
+  border-top: 1px solid #ddd;
   margin-top: 1.1em;
-  overflow: hidden; }
+  padding: 0.55em 0 1.1em 0; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
 
 * {
   margin: 0;
@@ -158,35 +149,35 @@ footer {
   -webkit-font-smoothing: antialiased; }
 
 html, body {
+  font-size: 100%;
   height: 100%; }
 
 body {
   background: #fff;
+  color: #111;
   -webkit-font-smoothing: antialiased;
   font-family: "Merriweather Sans", sans-serif;
   line-height: 1.6em;
-  font-size: 12px;
+  font-size: 100%;
   font-weight: normal;
   font-style: normal;
-  line-height: 12px;
-  text-align: center;
-  margin: 1.1em; }
+  line-height: 100%;
+  padding: 0 1.1em 1.1em 1.1em;
+  margin: 0;
+  line-height: 150%; }
 
 p {
   margin: 0 0 1.1em; }
 
 h1 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 51px;
   line-height: 52px;
-  font-weight: 900;
-  letter-spacing: 1px; }
+  font-weight: 900; }
 
 h2 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 34px;
   line-height: 41px;
@@ -194,14 +185,12 @@ h2 {
 
 h3 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block;
   font-size: 19px;
   line-height: 27px; }
 
 h4, h5, h6 {
   font-family: "Merriweather Sans", sans-serif;
-  letter-spacing: 1px;
   display: block; }
 
 a {
@@ -218,10 +207,8 @@ a {
   text-align: justify;
   max-width: 700px;
   margin: 1.1em auto;
-  line-height: 12px; }
+  line-height: 100%; }
   .site__cover {
-    display: inline-block;
-    vertical-align: middle;
     max-width: 100%;
     height: auto; }
 
