--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,6 @@
         <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700italic,700,800,800italic' rel='stylesheet' type='text/css'>
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/lib/foundation.css">
         <link rel="stylesheet" href="/css/lib/font-awesome.css">
         <link rel="stylesheet" href="/css/main.css">
 
@@ -43,7 +42,6 @@
 
     </head>
     <body>
-
         <div class="site">
             <div class="header">
 		<a href="/" class="header__link header__link--title">{{ site.name }}</a>
@@ -53,7 +51,7 @@
 
             {{ content }}
 
-            <footer>
+            <div class="footer">
                 <div class="contact">
                     <ul class="social">
                         <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
@@ -64,7 +62,7 @@
                         <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
                     </ul>
                 </div>
-            </footer>
+            </div>
         </div>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -74,7 +72,6 @@
             ga('require', 'displayfeatures');
             ga('create', 'UA-47277958-1', 'auto');
             ga('send', 'pageview');
-
         </script>
     </body>
 </html>
