Using Neat for a grid, copying over font-awesome into 'dist', refactoring around media queries

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,16 +52,14 @@
             {{ content }}
 
             <div class="footer">
-                <div class="contact">
-                    <ul class="social">
-                        <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
-                        <li><a href="https://facebook.com/pamocampo/about" rel="me"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
-                        <li><a href="https://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
-                    </ul>
-                </div>
+                <ul class="footer__social">
+                    <li><a href="https://twitter.com/pmocampo" rel="me"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/pamo" rel="me"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://facebook.com/pamocampo/about" rel="me"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://foursquare.com/pmocampo"><i class="fa fa-foursquare"></i></a></li>
+                    <li><a href="https://instagram.com/pmocampo" rel="me"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://pamo.tumblr.com" rel="me"><i class="fa fa-tumblr"></i></a></li>
+                </ul>
             </div>
         </div>
         <script>
