--- a/_scss/_posts.scss
+++ b/_scss/_posts.scss
@@ -49,7 +49,7 @@
       float: left;
       margin-right: $base-spacing;
 
-      @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+      @include media($desk){
 	 margin-bottom: $base-spacing;
 	 max-width: 100%;
       }
