--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -1,16 +1,14 @@
-.social{
-    width: 100%;
-    list-style: none;
-    li {
-	float: left;
-	padding: 0 $half-spacing-unit 0 $half-spacing-unit;
-	font-size: 1.5em;
-    }
-}
-
-footer {
+.footer {
     color: $gray;
     border-top: 1px solid $silver;
     margin-top: $base-spacing;
     padding: $half-spacing-unit 0 $base-spacing 0;
+    &__social {
+	list-style: none;
+	li {
+	    float: left;
+	    padding: 0 $half-spacing-unit 0 $half-spacing-unit;
+	    font-size: 1.5em;
+	}
+    }
 }
