--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,7 +1,11 @@
+@import "bourbon";
+@import "neat";
+@import "grid-settings";
 @import "variables";
 @import "typography";
 @import "header";
 @import "posts";
+@import "about";
 @import "footer";
 
 @mixin box-sizing($type:border-box) {
@@ -54,6 +58,7 @@ h3 {
 h4, h5, h6 {
     @include heading;
 }
+
 a {
     @include anchor;
 }
@@ -114,17 +119,4 @@ a {
 
 hr {
     width: 1px;
-}
-
-.row {
-  margin: 0 auto;
-  max-width: 62.5rem;
-  width: 100%;
-  &:before, &:after {
-     content: " ";
-     display: table;
-  }
-  &:after {
-     clear: both;
-  }
 }
