--- a/_scss/_typography.scss
+++ b/_scss/_typography.scss
@@ -89,7 +89,7 @@ $sans-serif: 'Merriweather Sans', sans-serif;
   display: inline-block;
   border-top: 1px solid $silver;
   padding: 7px 0 9px 0;
-  margin: $half-spacing-unit 0 $half-spacing-unit;
+  margin: $small-spacing 0 $small-spacing;
 }
 
 h1 {
