--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -2,12 +2,12 @@
     color: $gray;
     border-top: 1px solid $silver;
     margin-top: $base-spacing;
-    padding: $half-spacing-unit 0 $base-spacing 0;
+    padding: $small-spacing 0 $base-spacing 0;
     &__social {
 	list-style: none;
 	li {
 	    float: left;
-	    padding: 0 $half-spacing-unit 0 $half-spacing-unit;
+	    padding: 0 $small-spacing 0 $small-spacing;
 	    font-size: 1.5em;
 	}
     }
