--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -1,10 +1,13 @@
-$base-spacing: 1.1em;
-$half-spacing-unit: $base-spacing/2;
-$base-font-size: 100% !default;
-$base-line-height: 150% !default;
+$base-font-size: 1em;
+
+$base-line-height: 1.5;
+$heading-line-height: 1.2;
+
+$base-border-radius: 3px;
+$base-spacing: $base-line-height * 1em;
+$small-spacing: $base-spacing / 2;
 
 // COLOR VARIABLES
-//
 // Cool
 $aqua:  #7FDBFF;
 $blue:  #0074D9;
