--- a/css/main.css
+++ b/css/main.css
@@ -40,10 +40,10 @@ h4, h5, h6 {
   display: inline-block;
   border-top: 1px solid #ddd;
   padding: 7px 0 9px 0;
-  margin: 0.55em 0 0.55em; }
+  margin: 0.75em 0 0.75em; }
 
 .header {
-  margin-bottom: 1.1em; }
+  margin-bottom: 1.5em; }
   .header__link {
     color: #0074D9;
     font-size: 11px;
@@ -69,26 +69,27 @@ h4, h5, h6 {
           display: inline-block; } }
     .header__link--nav {
       border-right: 1px solid #aaa;
-      padding: 0 1.1em 0 1.1em; }
+      padding: 0 1.5em 0 1.5em; }
       .header__link--nav:last-of-type {
         border: 0; }
       .header__link--nav:visited, .header__link--nav:hover, .header__link--nav:active {
         color: #aaa; }
 
 .post {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "Merriweather", serif;
   text-align: left; }
+  .post::after {
+    clear: both;
+    content: "";
+    display: table; }
   .post .terminal {
-    padding: 1.1em;
+    padding: 1.5em;
     border: 1px solid #111;
     background-color: #aaa;
     color: #fff; }
-  .post:ul, .post:ol {
-    margin-left: 1.1em; }
-  .post:after {
-    content: "";
-    display: table;
-    clear: both; }
   .post__category {
     border-bottom: 1px solid;
     display: inline-block;
@@ -104,18 +105,17 @@ h4, h5, h6 {
     .post blockquote p:before {
       font-family: FontAwesome;
       position: relative;
-      top: 0.2em;
       content: "\f10d";
-      font-size: 4em;
-      margin-right: 0.2em; }
+      font-size: 2em;
+      margin-right: 0.75em; }
   .post img {
     max-width: 33%;
     height: auto;
     float: left;
-    margin-right: 1.1em; }
+    margin-right: 1.5em; }
     @media screen and (min-width: 1224px) {
       .post img {
-        margin-bottom: 1.1em;
+        margin-bottom: 1.5em;
         max-width: 100%; } }
   .post__title {
     font-family: "Merriweather Sans", sans-serif;
@@ -150,18 +150,6 @@ h4, h5, h6 {
     width: 31.76157%; }
     .about__photoHeader img:last-child {
       margin-right: 0; }
-    .about__photoHeader img:nth-child(3n) {
-      margin-right: 0; }
-    .about__photoHeader img:nth-child(3n+1) {
-      clear: left; }
-    @media screen and (min-width: 1224px) {
-      .about__photoHeader img {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 31.76157%; }
-        .about__photoHeader img:last-child {
-          margin-right: 0; } }
 
 .about__photoFooter {
   max-width: 68em;
@@ -182,19 +170,14 @@ h4, h5, h6 {
 .footer {
   color: #aaa;
   border-top: 1px solid #ddd;
-  margin-top: 1.1em;
-  padding: 0.55em 0 1.1em 0; }
+  margin-top: 1.5em;
+  padding: 0.75em 0 1.5em 0; }
   .footer__social {
     list-style: none; }
     .footer__social li {
       float: left;
-      padding: 0 0.55em 0 0.55em;
+      padding: 0 0.75em 0 0.75em;
       font-size: 1.5em; }
-
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
 
 * {
   margin: 0;
@@ -202,7 +185,7 @@ h4, h5, h6 {
   -webkit-font-smoothing: antialiased; }
 
 html, body {
-  font-size: 100%;
+  font-size: 1em;
   height: 100%; }
 
 body {
@@ -211,16 +194,16 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: "Merriweather Sans", sans-serif;
   line-height: 1.6em;
-  font-size: 100%;
+  font-size: 1em;
   font-weight: normal;
   font-style: normal;
-  line-height: 100%;
-  padding: 0 1.1em 1.1em 1.1em;
+  line-height: 1em;
+  padding: 0 1.5em 1.5em 1.5em;
   margin: 0;
-  line-height: 150%; }
+  line-height: 1.5; }
 
-p {
-  margin: 0 0 1.1em; }
+p, div {
+  margin: 1.5em 0 1.5em 0; }
 
 h1 {
   font-family: "Merriweather Sans", sans-serif;
@@ -256,11 +239,23 @@ a {
   a:active {
     color: #004b8c; }
 
+ul, ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
+  .post ul {
+    list-style-type: disc;
+    margin-bottom: 0.75em;
+    padding-left: 1.5em; }
+  .post ol {
+    list-style-type: decimal;
+    margin-bottom: 0.75em;
+    padding-left: 1.5em; }
+
 .site {
   text-align: justify;
   max-width: 700px;
-  margin: 1.1em auto;
-  line-height: 100%; }
+  margin: 1.5em auto; }
   .site__cover {
     max-width: 100%;
     height: auto; }
@@ -284,19 +279,19 @@ a {
     position: absolute;
     font-size: 1.5em;
     top: -1px;
-    right: -1.1em; }
+    right: -1.5em; }
 
 .postDescription__truncatedContent {
   font-family: "Merriweather", serif;
   font-size: .9em;
-  margin-bottom: 1.1em;
+  margin-bottom: 1.5em;
   word-wrap: break-word; }
 
 .postDescription__date {
   font-family: "Merriweather", serif;
   font-style: italic;
   font-size: .9em;
-  margin: 1.1em 0 0.55em 0; }
+  margin: 1.5em 0 0.75em 0; }
 
 hr {
   width: 1px; }
