--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,11 @@ h4, h5, h6 {
       .post img {
         margin-bottom: 1.5em;
         max-width: 100%; } }
+  .post .emoji {
+    vertical-align: top;
+    float: none;
+    max-width: none;
+    margin: 0; }
   .post__title {
     font-family: "Merriweather Sans", sans-serif;
     display: block;
@@ -134,6 +139,21 @@ h4, h5, h6 {
     .post__content span {
       font-family: "Merriweather Sans", sans-serif;
       font-weight: 700; }
+  .post .instagram-media {
+    margin: 1.5em auto 1.5em;
+    padding: 0;
+    width: 100%;
+    border: 0;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5), 0 1px 10px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.5), 0 1px 10px 0 rgba(0, 0, 0, 0.15); }
+  @media screen and (min-width: 1224px) {
+    .post .instagram-media {
+      width: 70%;
+      width: -webkit-calc(70%);
+      width: -moz-calc(70%);
+      width: calc(70%); } }
 
 .about__photoHeader {
   max-width: 68em;
@@ -170,7 +190,7 @@ h4, h5, h6 {
 .footer {
   color: #aaa;
   border-top: 1px solid #ddd;
-  margin-top: 1.5em;
+  margin: 1.5em 0 1.5em 0;
   padding: 0.75em 0 1.5em 0; }
   .footer__social {
     list-style: none; }
