Moves away from node bourbon and uses wiredep to inject bower scss deps into css

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,5 +1,8 @@
-@import "bourbon";
-@import "neat";
+/* Do not remove the comments below. They are the markers used by wiredep to inject
+   sass dependencies defined in the bower.json */
+// bower:scss
+// endbower
+
 @import "grid-settings";
 @import "variables";
 @import "typography";
