--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* Do not remove the comments below. They are the markers used by wiredep to inject
+   sass dependencies defined in the bower.json */
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
