Uses imagemin, creates responsive sizes for images

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -79,7 +79,7 @@ ul, ol {
     max-width: 700px;
     margin: $base-spacing auto;
     &__cover {
-      max-width: 100%;
+      width: 100%;
       height: auto;
   }
 }
